Closed
Bug 453674
Opened 17 years ago
Closed 17 years ago
TM: jstracer.cpp build failure on 64bit Linux error: 'cycles' was not declared in this scope
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bc, Unassigned)
Details
mozilla-central centos5 64 xeon 5450
error: 'cycles' was not declared in this scope
full warnings/error log
jstracer.cpp: In constructor 'TraceRecorder::TraceRecorder(JSContext*, nanojit::GuardRecord*, nanojit::Fragment*, TreeInfo*, unsigned int, uint8*, uint8*, nanojit::GuardRecord*)':
jstracer.cpp:803: warning: format '%u' expects type 'unsigned int', but argument 4 has type 'long int'
jstracer.cpp: In member function 'bool TraceRecorder::checkType(jsval&, uint8, bool&)':
jstracer.cpp:1564: warning: format '%d' expects type 'int', but argument 2 has type 'ptrdiff_t'
jstracer.cpp: In member function 'void TraceRecorder::prepareTreeCall(nanojit::Fragment*)':
jstracer.cpp:1722: warning: format '%d' expects type 'int', but argument 2 has type 'ptrdiff_t'
jstracer.cpp:1722: warning: format '%d' expects type 'int', but argument 3 has type 'ptrdiff_t'
jstracer.cpp:1722: warning: format '%d' expects type 'int', but argument 4 has type 'ptrdiff_t'
jstracer.cpp: In function 'bool js_RecordLoopEdge(JSContext*, TraceRecorder*, jsbytecode*, uintN&)':
jstracer.cpp:2191: warning: format '%d' expects type 'int', but argument 2 has type 'long int'
jstracer.cpp:2191: warning: format '%d' expects type 'int', but argument 3 has type 'long int'
jstracer.cpp:2191: warning: format '%d' expects type 'int', but argument 4 has type 'long int'
jstracer.cpp: In function 'nanojit::GuardRecord* js_ExecuteTree(JSContext*, nanojit::Fragment**, uintN&, nanojit::GuardRecord**)':
jstracer.cpp:2217: warning: format '%u' expects type 'unsigned int', but argument 4 has type 'long int'
jstracer.cpp:2365: warning: unused variable 'cycles'
jstracer.cpp:2368: error: 'cycles' was not declared in this scope
jstracer.cpp: In function 'void js_AbortRecording(JSContext*, jsbytecode*, const char*)':
jstracer.cpp:2508: warning: format '%d' expects type 'int', but argument 3 has type 'long int'
jstracer.cpp: In function 'void js_FinishJIT(JSTraceMonitor*)':
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 2 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 3 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 4 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 5 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 6 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 7 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 8 has type 'uint64'
jstracer.cpp:2583: warning: format '%llu' expects type 'long long unsigned int', but argument 9 has type 'uint64'
jstracer.cpp:2586: warning: format '%llu' expects type 'long long unsigned int', but argument 2 has type 'uint64'
jstracer.cpp:2586: warning: format '%llu' expects type 'long long unsigned int', but argument 3 has type 'uint64'
jstracer.cpp:2586: warning: format '%llu' expects type 'long long unsigned int', but argument 4 has type 'uint64'
jstracer.cpp:2586: warning: format '%llu' expects type 'long long unsigned int', but argument 5 has type 'uint64'
jstracer.cpp: In member function 'bool TraceRecorder::guardDenseArrayIndex(JSObject*, jsint, nanojit::LIns*, nanojit::LIns*, nanojit::LIns*)':
jstracer.cpp:3569: warning: overflow in implicit constant conversion
jstracer.cpp: At global scope:
jstracer.cpp:123: warning: 'did_we_check_sse2' defined but not used
Flags: in-testsuite-
Flags: in-litmus-
| Reporter | ||
Comment 1•17 years ago
|
||
PS. debug failure only.
I don't recall enabling the JIT yet for x86_64, did you manually enable it?
Updated•17 years ago
|
Summary: jstracer.cpp build failure on 64bit Linux error: 'cycles' was not declared in this scope → TM: jstracer.cpp build failure on 64bit Linux error: 'cycles' was not declared in this scope
| Reporter | ||
Comment 3•17 years ago
|
||
not intentionally. there is nothing in my mozconfig that mentions jit. note this was with mozilla-central and not tracemonkey repo. I thought TM: was reserved for the tracemonkey repo.
| Reporter | ||
Comment 4•17 years ago
|
||
ignore the mozconfig comment. the build was a generic debug shell build with Makefile.ref
Comment 5•17 years ago
|
||
TM is for anything that concerns the JIT. Feel free to use it broadly. Its easier for me to remove it than find bugs that don't have it.
Pushed fixes as changeset ee704fbeb74f. JIT turned off until I can track some runtime regressions down.
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 7•17 years ago
|
||
David, don't forget mozilla-central.
My account doesn't have permission to push to m-c.
You need to log in
before you can comment on or make changes to this bug.
Description
•