Disabled building AMD64 JIT in shell until regressions are tracked down.  Fixed some compiling errors while I'm poking around here (bug 453674).